# TUIO11_CPP

./: CMakeLists.txt  SimpleSimulator.cpp  TuioDemo.cpp  TuioDump.cpp
TUIO/: OscReceiver.cpp  TcpReceiver.cpp  TcpReceiver.h  TcpSender.cpp  TuioCursor.cpp  TuioServer.cpp  TuioTime.h  UdpReceiver.cpp  UdpSender.cpp  WebSockSender.cpp
oscpack/ip/posix/: UdpSocket.cpp
oscpack/osc/: OscReceivedElements.cpp
